assets/css/style.css
@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);

/* ------------ Typography ------------ */

h1, h2, h3, h4, h5, h6 {
	font-family: "Lato", "HelveticaNeue-UltraLight", "Helvetica Neue UltraLight", "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: 100;		/* Really only applies to Lato */
	color: #000000;
}

p {
	font-family: "Lato", "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: 300;		/* Really only applies to Lato */
	color: #000000;
	font-size: 1.3em;
}

h1.header-text {
	font-size: 3.75em;
	color: #eee;
}

h1.large-header-text {
	font-size: 5em;
	font-weight: 300;
}

h1.section-title {
	font-size: 3em;
	text-align: center;
}

.white-text {
	color: #FFFFFF;
}

.navbar {
	font-family: "Lato", "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-weight: 700;
	font-size: 1.25em;
}


/* ------------ Navigation ------------ */

@media (min-width: 768px) {
    .navbar .navbar-nav {
        display: inline-block;
        float: none;
        vertical-align: top;
    }

    .navbar .navbar-collapse {
        text-align: center;
    }
}


.profile-pic {
    max-width: 256px;
}

.resume-pic {
    max-height: 300px;
    padding-left: 50px;
}

.resume-text {
    padding-right: 30px;
}

.resume-text-container {
    padding-top: 80px;
}

h1.project-header {
    font-size: 2em;
    margin-top: 0px;
}

body {
    position: relative;
}

/* ------------ Contact Icons (Font Awesome) ------------ */
.contact-icon {
	color: #fff;
	font-size: 2em;
	margin-left: 20px;
	margin-right: 20px;
	-webkit-transition: .4s all;
}

@media (max-width: 768px) {
	.contact-icon {
		margin-left: 0px;
		margin-right: 0px;
	}
}

.enlarge {
	-webkit-transform: scale(1.25);
    -moz-transform: scale(1.25);
    -o-transform: scale(1.25);
    transform: scale(1.25);
}


/* ------------ Page Layout & Sections ------------*/
.container {
	max-width: 940px;
}

/* Parallax background with CSS, without the Chrome lag associated with background-attachment: fixed */
.fixed-background-image {
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	min-width: 100%;
	background-repeat: no-repeat;
	background-position: 0% 0%;
	position: fixed;
	-webkit-transform: translateZ(0);
	pointer-events: none;
}

/* Account for the 50px tall sticky navbar */
.content {
	padding-top: 50px;
}

.content-section {
	min-height: 300px;
	padding-top: 50px;
	padding-bottom: 50px;
	text-align: center;
}

#header-image {
	background-image: url(../img/laptop_banner.jpg);
	z-index: -1;
}

#about {
	background-color: #FAFAFA;
}

.about-text {
	text-align: left;
	color: #000;
}

#resume {
    background-color: #5170a0;
}

#projects {
	background-color: #292929;
}

#experience {
	background-color: #FAFAFA;
}

/* Re-align text on smaller screens (right-aligned text on mobile looks messy) */
@media(max-width: 768px) {
	.experience-title {
		text-align: center;
	}
	.experience-text {
		text-align: left;
	}
}


.bottom-experience-hr {
	margin-top: 40px;
	margin-bottom: 40px;
}

.btn-gray {
	background-color: #292929;
}

.btn-gray:hover {
	background-color: #696969;
}

#contact-image {
	background-image: url(../img/keyboard.jpg);
	z-index: -2;
	height: 100%;
	bottom: 0px;
}

.section-hr {
	color: #777;
	border-color: inherit;
	padding-bottom: 20px;
}

.project-hr {
	color: #777;
	border-color: inherit;
    margin-top: 50px;
	padding-bottom: 20px;
}

.well {
	background-color: #292929;
	border-color: #000;
}

.well hr {
	color: #777;
	border-color: #777;
}

/* Only applied if Javascript is disabled on the user's device */
/* (Removed with Javascript if enabled) */
.no-js {
	min-height: 95vh;
	background-image: url(../img/laptop_banner.jpg);
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	padding-top: 20vh;
}




.left-border {
    border-left: 1px white solid;
}

